--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             v-on:addproduct="add_product"
             v-on:search="search"
             v-on:tologin="hide_main"
-            v-on:tomainage="toMainPage"
+            v-on:tomain_page="toMainPage"
             v-on:show_favorite="showFavorite"
             :user="user"
             :count="count"
@@ -45,7 +45,7 @@
 
     <div v-show="main" class="container main">
         <div class="row py-1 my-1 d-flex align-items-center justify-content-center search  bg-light text-dark">
-            <div class="col-12 col-sm-6 col-md-3 col-lg-3 my-1">
+            <div class="col-12 col-sm-6 col-md-3 col-lg-3 mb-1">
                 <fieldset class="form-group d-flex align-items-center justify-content-center flex-column">
                     <label class="mx-0 mb-1">country</label>
                     <select v-model="selectedCountry" id="country" class="form-control" @click="selectCountry()">
@@ -53,13 +53,13 @@
                     </select>
                 </fieldset>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 col-lg-3 my-1">
+            <div class="col-12 col-sm-6 col-md-3 col-lg-3 mb-1">
                 <fieldset class="form-group d-flex align-items-center justify-content-center flex-column">
                     <label class="mx-0 mb-1">min price</label>
                     <input v-model="min" id="min" class="form-control" type="text" placeholder="Price from (USD)"/>
                 </fieldset>
             </div>
-            <div class="col-12 col-sm-6 col-md-3 col-lg-3 my-1">
+            <div class="col-12 col-sm-6 col-md-3 col-lg-3 mb-1">
                 <fieldset class="form-group d-flex align-items-center justify-content-center flex-column">
                     <label class="mx-0 mb-1">max price</label>
                     <input v-model="max" id="max" class="form-control" type="text" placeholder="Price to (USD)"/>
@@ -157,6 +157,7 @@
 <script>
 
     const ComponentModal = {
+        name: 'ComponentModal',
         props: {
             product: {
                 type: Array,
@@ -212,6 +213,7 @@
     }
 
     const ComponentHeader = {
+        name: 'ComponentHeader',
         props: ['bg_header', 'count', 'show_search_panel', 'user'],
         data() {
             return {
@@ -235,9 +237,10 @@
             },
             toMainPage: function () {
                 this.burger()
-                this.$emit('tomainage')
+                this.$emit('tomain_page')
             },
             search: function () {
+                console.log('keydown')
                 this.$emit('search', this.lowercase)
             },
             burger: function () {
@@ -263,59 +266,60 @@
                         location: this.location[0].toUpperCase() + this.location.slice(1)
                     }
                 } else if (!this.country && !this.location) {
-                  return {
-                    country: this.country = '',
-                    location: this.location = ''
-                  }
+                    return {
+                        country: this.country = '',
+                        location: this.location = ''
+                    }
                 }
             }
         },
-        template: `<div class="container-fluid header p-2 fixed-top" :class="{'header-color': bg_header}">
-                    <div class="row d-none d-md-flex">
-                        <div v-if="!bg_header" class="col-md-4 col-xl-3 d-flex align-items-center justify-content-center">
-                            <img @click="toMainPage()" class="logo" src="./logo_dark.png" alt="logo">
-                        </div>
-                        <div v-if="bg_header" class="col-md-4 col-xl-3 d-flex align-items-center justify-content-center">
-                            <img @click="toMainPage()" class="logo" src="./logo_light.png" alt="logo">
-                        </div>
-                        <div class="col-md-3 col-xl-6"></div>
-                        <div v-if="bg_header" class="col-md-5 col-xl-3 d-flex align-items-center justify-content-start">
-                            <button @click="addProduct()" class="btn btn-add btn-success" >+ADD</button>
-                            <span v-if="active_user" class="exit text-center text-white w-50 mx-2" @mouseover="active_user = !active_user">{{ user }}</span>
-                            <span v-else class="exit text-center text-white w-50 mx-2" @click="toLogin()" @mouseleave="active_user = !active_user">exit</span>>
-                            <i class='far fa-heart text-light' @click="showFavorite()"></i>
-                            <span class="m-1 text-white">{{ count }}</span>
-                        </div>
-                        <div v-if="show_search_panel">
-                            <div class="container my-1 p-0 d-flex align-items-center justify-content-center search">
-                                <div class="col-sm-4 col-md-6">
-                                    <fieldset class="form-group">
-                                        <input
-                                            v-model="country"
-                                            id="search"
-                                            class="form-control"
-                                            type="text"
-                                            placeholder="Search"/>
-                                     </fieldset>
-                                </div>
-                                <div class="col-sm-4 col-md-3 px-3">
-                                    <fieldset class="form-group">
-                                        <input
-                                            v-model="location"
-                                            id="location"
-                                            class="form-control"
-                                            type="text"
-                                            placeholder="Location"/>
-                                    </fieldset>
-                                </div>
-                                <div class="col-sm-4 col-md-3">
-                                    <button @click="search()" class="btn style-btn-search w-100">SEARCH</button>
+        template: `<div class="container-fluid header p-0 p-md-2 fixed-top" :class="{'header-color': bg_header}">
+                       <div class="row d-none d-md-flex">
+                            <div v-if="!bg_header" class="col-md-4 col-xl-3 d-flex align-items-center justify-content-center">
+                                <img @click="toMainPage()" class="logo" src="./logo_dark.png" alt="logo">
+                            </div>
+                            <div v-if="bg_header" class="col-md-4 col-xl-3 d-flex align-items-center justify-content-center">
+                                <img @click="toMainPage()" class="logo" src="./logo_light.png" alt="logo">
+                            </div>
+                            <div class="col-md-3 col-xl-6"></div>
+                            <div v-if="bg_header" class="col-md-5 col-xl-3 d-flex align-items-center justify-content-center">
+                                <button @click="addProduct()" class="btn btn-add btn-success" >+ADD</button>
+                                <span v-if="active_user" class="exit text-center text-white mx-3" @mouseover="active_user = !active_user">{{ user }}</span>
+                                <span v-else class="exit text-center text-white mx-5" @click="toLogin()" @mouseleave="active_user = !active_user">exit</span>
+                                <i class='far fa-heart text-light' @click="showFavorite()"></i>
+                                <span class="m-1 text-white">{{ count }}</span>
+                            </div>
+                            <div v-if="show_search_panel">
+                                <div class="container my-1 p-0 d-flex align-items-center justify-content-center search">
+                                    <div class="col-sm-12 col-md-3"></div>
+                                    <div class="col-sm-12 col-md-3">
+                                        <fieldset class="form-group">
+                                            <input
+                                                @keydown="search()"
+                                                v-model="country"
+                                                id="search"
+                                                class="form-control"
+                                                type="text"
+                                                placeholder="Country"/>
+                                         </fieldset>
+                                    </div>
+                                    <div class="col-sm-12 col-md-3 px-3">
+                                        <fieldset class="form-group">
+                                            <input
+                                                @keydown="search()"
+                                                v-model="location"
+                                                id="location"
+                                                class="form-control"
+                                                type="text"
+                                                placeholder="Location"/>
+                                        </fieldset>
+                                    </div>
+                                    <div class="col-sm-12 col-md-3"></div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                <div class="row d-flex d-md-none mobile-header">
-                    <div class="col-6 d-flex align-items-center justify-content-start"><img class="logo" src="./logo_light.png" alt="logo"></div>
+                       </div>
+                    <div class="row d-flex d-md-none mobile-header">
+                    <div class="col-6 d-flex align-items-center justify-content-start ps-4"><img class="logo" src="./logo_light.png" alt="logo"></div>
                         <div class="col-6 d-flex align-items-center justify-content-end">
                             <div @click="burger" class="menu-btn">
                                 <div class="menu-btn__burger"></div>
@@ -324,7 +328,8 @@
                         <div id="mobile-menu" class="target text-light updown p-2">
                             <div class="row px-4 my-1 d-flex align-items-center justify-content-center">
                                 <button @click="addProduct()" class="col-4 btn  btn-success"  :class="{'d-none': !bg_header}">+ADD</button>
-                                <button @click="toLogin()" class="col-4 btn  text-light">LOGIN</button>
+                                <span v-if="active_user" class="col-4 exit text-center text-white" @mouseover="active_user = !active_user">{{ user }}</span>
+                                <span v-else class="col-4 exit text-center text-white" @click="toLogin()" @mouseleave="active_user = !active_user">exit</span>
                                 <p class="col-4 m-0 d-flex align-items-center justify-content-center">
                                     <i class=' far fa-heart text-light' @click="showFavorite()" style='font-size:24px'></i>
                                     <span class="m-1 text-white">{{ count }}</span>
@@ -332,19 +337,21 @@
                             </div>
                             <div v-if="show_search_panel">
                                 <div class="row px-4 my-1 d-flex align-items-center justify-content-center search">
-                                    <div class="p-0 p-sm-1 my-1 col-12 col-sm-4 col-md-6">
+                                    <div class="ps-0 col-6">
                                         <fieldset class="form-group">
                                             <input
+                                                @keydown="search()"
                                                 v-model="country"
                                                 id="search-mobile"
                                                 class="form-control clear-search"
                                                 type="text"
-                                                placeholder="Search"/>
+                                                placeholder="Country"/>
                                         </fieldset>
                                     </div>
-                                    <div class="p-0 p-sm-1 my-1 col-12 col-sm-4 col-md-3">
+                                    <div class="pe-0 col-6">
                                         <fieldset class="form-group">
                                             <input
+                                                @keydown="search()"
                                                 v-model="location"
                                                 id="location-mobile"
                                                 class="form-control  clear-search"
@@ -352,9 +359,7 @@
                                                 placeholder="Location"/>
                                         </fieldset>
                                     </div>
-                                    <div class="p-0 p-sm-1 my-1 col-12 col-sm-4 col-md-3">
-                                        <button @click="search()" class="btn btn-success w-100">SEARCH</button>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -363,6 +368,7 @@
     }
 
     const ComponentLogin = {
+        name: 'ComponentLogin',
         data() {
             return {
                 mail: null,
@@ -375,11 +381,11 @@
             onSubmit() {
                 if (this.mail === null || this.password === null) {
                     document.querySelectorAll('form input').forEach(function (a, b, c) {
-                      if(!a.value) {
-                        a.style.borderColor = 'red'
-                      } else {
-                        a.style.borderColor = '#ced4da'
-                      }
+                        if (!a.value) {
+                            a.style.borderColor = 'red'
+                        } else {
+                            a.style.borderColor = '#ced4da'
+                        }
                     })
                     this.wrong_password = true
                     setTimeout(() => this.wrong_password = false, 3000);
@@ -483,6 +489,7 @@
     }
 
     const ComponentRegistration = {
+        name: 'ComponentRegistration',
         data() {
             return {
                 email: null,
@@ -495,13 +502,13 @@
         methods: {
             onSubmit() {
                 if (this.email === null || this.full_name === null || this.password === null || this.password_again === null) {
-                  document.querySelectorAll('form input').forEach(function (a, b, c) {
-                    if(!a.value) {
-                      a.style.borderColor = 'red'
-                    } else {
-                      a.style.borderColor = '#ced4da'
-                    }
-                  })
+                    document.querySelectorAll('form input').forEach(function (a, b, c) {
+                        if (!a.value) {
+                            a.style.borderColor = 'red'
+                        } else {
+                            a.style.borderColor = '#ced4da'
+                        }
+                    })
                     this.wrong_password = true
                     setTimeout(() => this.wrong_password = false, 3000);
                     return
@@ -623,6 +630,7 @@
     }
 
     const ComponentAddProduct = {
+        name: 'ComponentAddProduct',
         props: ['fixed_bottom', 'lengthArray'],
         data() {
             return {
@@ -707,7 +715,7 @@
                                         placeholder="Location"/>
                                 </fieldset>
                                 <fieldset class="form-group">
-                                    <label for="Country"><b>Country</b></label>
+                                    <label for="Country"><b>COUNTRY</b></label>
                                     <input
                                         v-model="country"
                                         id="Country"
@@ -756,7 +764,7 @@
                                         placeholder="Price"
                                         name="price"/>
                                 </fieldset>
-                                <button @click="addNewProduct()" type="submit" class="btn btn-success w-75 mx-auto d-block mt-3">Submit</button>
+                                <button @click="addNewProduct()" type="submit" class="btn btn-success w-75 mx-auto d-block mt-3">ADD PRODUCT</button>
                            </form>
                       </div>
                   </div>
@@ -764,6 +772,7 @@
     }
 
     const ComponentFooter = {
+        name: 'ComponentFooter',
         props: ['fixed_bottom'],
         data() {
             return {}
@@ -786,6 +795,7 @@
 
 
     const app = {
+        name: 'main component',
         components: {
             ComponentHeader,
             ComponentFooter,
@@ -958,8 +968,9 @@
         computed: {
             changePrice: function () {
                 if (this.searchCountry && this.searchLocation) {
-                  console.log('1')
-                  function filterByCity(arr, city, location) {
+                    console.log('1')
+
+                    function filterByCity(arr, city, location) {
                         return arr.filter(function (item, i, arr) {
                             if (item.country.includes(city) && item.location.includes(location)) {
                                 return item
@@ -970,7 +981,8 @@
                     this.changeProduct = filterByCity(this.array, this.searchCountry, this.searchLocation)
                     return this.changeProduct
                 } else if (this.searchCountry || this.searchLocation) {
-                  console.log('2')
+                    console.log('2')
+
                     function filterByCity(arr, city, location) {
                         return arr.filter(function (item, i, arr) {
                             if (item.country.includes(city) || item.location.includes(location)) {
@@ -993,7 +1005,7 @@
 
                 if (this.selectedCountry.length > 0) {
                     this.hide_clear_filters = true
-                  this.set_min_max(this.countrys)
+                    this.set_min_max(this.countrys)
                     return this.countrys
                 }
 
@@ -1033,7 +1045,7 @@
             },
             search(search) {
                 if (search === undefined) {
-                  console.log('empty')
+                    console.log('empty')
                     return false
                 } else {
                     this.hide_clear_filters = true
@@ -1185,17 +1197,17 @@
                 this.favoriteProduct = []
                 this.count = ''
             },
-          set_min_max(min_max) {
-            let min = []
-            let max = []
-              min_max.forEach((e) => {
-                min.push(e.price);
-                max.push(e.price);
-              })
+            set_min_max(min_max) {
+                let min = []
+                let max = []
+                min_max.forEach((e) => {
+                    min.push(e.price);
+                    max.push(e.price);
+                })
 
-            this.min = Math.min(...min)
-            this.max = Math.max(...max)
-          }
+                this.min = Math.min(...min)
+                this.max = Math.max(...max)
+            }
         },
         mounted() {
             this.changeProduct = this.array
