add component favorite

--- a/index.html
+++ b/index.html
@@ -104,38 +104,12 @@
         </div>
     </div>
 
-    <div v-show="favorite_main" class="container main">
-        <div class="row d-flex align-items-center justify-content-center search p-2">
-            <div v-for="(arr, index) in showFavoriteProduct" :key="arr.id" :index="index"
-                 class="col-12 col-sm-6 col-md-4 col-lg-3 p-0">
-                <div class="card m-1 ">
-                    <div class="scale">
-                        <img :src="arr.image" class="card-img-top" :alt="arr.country">
-                    </div>
-                    <div class="card-body">
-                                <span v-for="n in 5" :key="n" class="">
-                                   <i class="fas fa-star" style="font-size:12px"
-                                      :class="{'rating-active': checkRating(n, arr)}"></i>
-                               </span>
-                        <div class="heart">
-                            <i @click="removeFromFavorite(arr, $event)" :id="arr.id" class='fas fa-heart active'
-                               style='font-size:24px'></i>
-                        </div>
-                        <div class="row">
-                            <p class="col-6 text-start card-text m-0"><b>{{ arr.country }}</b></p>
-                            <p class="col-6 text-end card-text m-0"><b>{{ arr.location }}</b></p>
-                        </div>
-                        <div class="row">
-                            <p class="col-6 text-start m-0"><b>${{ arr.price }}</b></p>
-                            <p class="col-6 text-end m-0">
-                                <img :src="arr.flag" class="card-img-top flag" :alt="arr.country">
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+    <component-favorite
+            v-if="favorite_main"
+            v-on:removefavorite="removeFromFavorite"
+            :favorite="showFavoriteProduct">
+    </component-favorite>
 
     <component-modal
             :product="productModal">
@@ -155,6 +129,60 @@
 </div>
 
 <script>
+
+    const ComponentFavorite = {
+        name: 'ComponentFavorite',
+        props: {
+            favorite: {
+                type: Array,
+                required: true
+            }
+        },
+        data() {
+            return {
+                checkRating(n, product) {
+                    return product.rating - n >= 0
+                }
+            }
+        },
+        methods: {
+            removeFavoriteItem(arr, $event) {
+                this.$emit('removefavorite', arr)
+            }
+        },
+        template: `<div class="container main">
+                        <div class="row d-flex align-items-center justify-content-center search p-2">
+                            <div v-for="(arr, index) in favorite" :key="arr.id" :index="index"
+                                 class="col-12 col-sm-6 col-md-4 col-lg-3 p-0">
+                                <div class="card m-1 ">
+                                    <div class="scale">
+                                        <img :src="arr.image" class="card-img-top" :alt="arr.country">
+                                    </div>
+                                    <div class="card-body">
+                                        <span v-for="n in 5" :key="n" class="">
+                                           <i class="fas fa-star" style="font-size:12px"
+                                              :class="{'rating-active': checkRating(n, arr)}"></i>
+                                       </span>
+                                        <div class="heart">
+                                            <i @click="removeFavoriteItem(arr, $event)" :id="arr.id" class='fas fa-heart active'
+                                               style='font-size:24px'></i>
+                                        </div>
+                                        <div class="row">
+                                            <p class="col-6 text-start card-text m-0"><b>{{ arr.country }}</b></p>
+                                            <p class="col-6 text-end card-text m-0"><b>{{ arr.location }}</b></p>
+                                        </div>
+                                        <div class="row">
+                                            <p class="col-6 text-start m-0"><b>$ {{ arr.price  }}</b></p>
+                                            <p class="col-6 text-end m-0">
+                                                <img :src="arr.flag" class="card-img-top flag" :alt="arr.country">
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>`
+                    }
 
     const ComponentModal = {
         name: 'ComponentModal',
@@ -802,7 +830,8 @@
             ComponentLogin,
             ComponentRegistration,
             ComponentAddProduct,
-            ComponentModal
+            ComponentModal,
+            ComponentFavorite
         },
         data() {
             return {
@@ -1085,6 +1114,7 @@
                 }
             },
             removeFromFavorite(product) {
+                console.log('removeFromFavorite product app')
                 let item = this.favoriteProduct
                 item.splice(item.findIndex(e => e.id === product.id), 1)
                 this.count = this.favoriteProduct.length
