--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>apiko</title>
+    <title>hot tour</title>
     <link rel="icon" type="image/svg" sizes="32x32" href="./icon.jfif">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           rel="stylesheet"
@@ -15,9 +15,9 @@
             display: none;
         }
     </style>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </head>
 <body>
-
 
 <div id="app" class="site" v-cloak>
 
@@ -69,13 +69,13 @@
             <div class="col-12 col-sm-6 col-md-3 col-lg-3 mt-4 d-flex align-items-center justify-content-center">
                 <a v-if="hide_clear_filters"
                    class="close form-control d-flex align-items-center justify-content-center w-100 py-1"
-                   href="javascript:void(0);" type="button" aria-label="Close" @click="clearFilters()">
+                   href="javascript:void(0);" aria-label="Close" @click="clearFilters()">
                     <span class="clear-filters mx-2">clear filters</span><span class="mx-2" aria-hidden="true">&times;</span>
                 </a>
             </div>
         </div>
         <div class="row px-3 p-sm-0  p-2 d-flex align-items-center justify-content-center search">
-            <div v-for="(arr, index) in changePrice" :key="arr.id" :id="arr.id" :index="index"
+            <div v-for="(arr, index) in changePrice" :key="arr.id" :id="arr.id" :data-index="index + 1"
                  class="col-12 col-sm-6 col-md-4 col-lg-3 p-0">
                 <div class="card m-1 ">
                     <div class="scale">
@@ -87,7 +87,7 @@
                                       :class="{'rating-active': checkRating(n, arr)}"></i>
                                </span>
                         <div class="heart">
-                            <i @click="addToFavorite(arr, $event)" :id="arr.id" class='far fa-heart'></i>
+                            <i @click="addToFavorite(arr, $event)"  class='far fa-heart'></i>
                         </div>
                         <div class="row">
                             <p class="col-6 text-start card-text m-0"><b>{{ arr.country }}</b></p>
@@ -131,7 +131,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
         crossorigin="anonymous"></script>
-<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
