--- a/index.html
+++ b/index.html
@@ -9,123 +9,89 @@
           rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
           crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <link rel="stylesheet" type="text/css" href="style/style.css"/>
+    <script src="js/fontawesome.js"></script>
 </head>
 <body>
-
 <div id="app" class="site" v-cloak>
+
+<!--    <div id="app">-->
+<!--        <app-nav></app-nav>-->
+<!--        <app-view>-->
+<!--            <app-sidebar></app-sidebar>-->
+<!--            <app-content></app-content>-->
+<!--        </app-view>-->
+<!--    </div>-->
+
 
     <component-login
             v-if="login"
-            v-on:toregistration="hide_login"
-            v-on:tomain="to_main">
+            v-on:show_registration="ShowHideLoginOrRegistration"
+            v-on:show_main="HideLoginShowMain">
     </component-login>
+
 
     <component-registration
             v-if="registration"
-            v-on:tologin="hide_registration">
+            v-on:show_login="ShowHideLoginOrRegistration">
     </component-registration>
 
+
     <component-header
-            v-on:addproduct="add_product"
-            v-on:search="search"
-            v-on:tologin="hide_main"
-            v-on:tomain_page="toMainPage"
-            v-on:show_favorite="showFavorite"
+            v-on:show_add_new_product_component="ShowAddNewProductComponent"
+            v-on:show_login_component="ShowLoginComponent"
+            v-on:show_main_component="ShowMainComponent"
+            v-on:show_favorite_component="ShowFavoriteComponent"
+            v-on:show_cart_component="ShowCartComponent"
             :user="user"
-            :count="count"
+            :favorite_counts="favorite_counts"
+            :cart_counts="cart_counts"
             :show_search_panel="show_search_panel"
             :bg_header="bg_header">
     </component-header>
 
-    <div v-show="main" class="container main">
-        <div class="row py-1 my-1 d-flex align-items-center justify-content-center search  bg-light text-dark">
-            <div class="col-12 col-sm-6 col-md-3 col-lg-3 mb-1">
-                <fieldset class="form-group d-flex align-items-center justify-content-center flex-column">
-                    <label class="mx-0 mb-1">country</label>
-                    <select v-model="selectedCountry" id="country" class="form-control" @click="selectCountry()">
-                        <option v-for="array in filterCountrys" :value="array.country">{{ array.country }}</option>
-                    </select>
-                </fieldset>
-            </div>
-            <div class="col-12 col-sm-6 col-md-3 col-lg-3 mb-1">
-                <fieldset class="form-group d-flex align-items-center justify-content-center flex-column">
-                    <label class="mx-0 mb-1">min price</label>
-                    <input v-model="min" id="min" class="form-control" type="text" placeholder="Price from (USD)"/>
-                </fieldset>
-            </div>
-            <div class="col-12 col-sm-6 col-md-3 col-lg-3 mb-1">
-                <fieldset class="form-group d-flex align-items-center justify-content-center flex-column">
-                    <label class="mx-0 mb-1">max price</label>
-                    <input v-model="max" id="max" class="form-control" type="text" placeholder="Price to (USD)"/>
-                </fieldset>
-            </div>
-            <div class="col-12 col-sm-6 col-md-3 col-lg-3 mt-4 d-flex align-items-center justify-content-center">
-                <a v-if="hide_clear_filters"
-                   class="close form-control d-flex align-items-center justify-content-center w-100 py-1"
-                   href="javascript:void(0);" aria-label="Close" @click="clearFilters()">
-                    <span class="clear-filters mx-2">clear filters</span><span class="mx-2" aria-hidden="true">&times;</span>
-                </a>
-            </div>
-        </div>
-        <div class="row px-3 p-sm-0  p-2 d-flex align-items-center justify-content-center search">
-            <div v-for="(arr, index) in changePrice" :key="arr.id" :id="arr.id" :data-index="index + 1"
-                 class="col-12 col-sm-6 col-md-4 col-lg-3 p-0">
-                <div class="card m-1 ">
-                    <div class="scale">
-                        <img :src="arr.image" @click="modal(arr)" :id="'product_' + arr.id" class="card-img-top cursor" :alt="arr.country">
-                    </div>
-                    <div class="card-body">
-                                <span v-for="n in 5" :key="n" class="">
-                                   <i class="fas fa-star" style="font-size:12px"
-                                      :class="{'rating-active': checkRating(n, arr)}"></i>
-                               </span>
-                        <div class="heart">
-                            <i @click="addToFavorite(arr, $event)"  class='far fa-heart'></i>
-                        </div>
-                        <div class="row">
-                            <p class="col-6 text-start card-text m-0"><b>{{ arr.country }}</b></p>
-                            <p class="col-6 text-end card-text m-0"><b>{{ arr.location }}</b></p>
-                        </div>
-                        <div class="row">
-                            <p class="col-6 text-start m-0"><b>${{ arr.price }}</b></p>
-                            <p class="col-6 text-end m-0">
-                                <img :src="arr.flag" class="card-img-top flag" :alt="arr.country">
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <component-main
+            v-if="main"
+            :add_new_item="add_new_item"
+            v-on:show_cart_component="ShowCartComponent"
+            v-on:favorite_count="FavoriteCount"
+            v-on:cart_count="CartCount">
+    </component-main>
 
     <component-favorite
             v-if="favorite_main"
-            v-on:removefavorite="removeFromFavorite"
-            :favorite="showFavoriteProduct">
+            v-on:favorite_count="FavoriteCount">
     </component-favorite>
+
+    <component-cart
+            v-if="cart_main"
+            v-on:cart_count="CartCount">
+    </component-cart>
 
     <component-add-product
             v-if="addProduct"
-            v-on:addnewproduct="addNewProduct">
+            v-on:add_new_product="AddNewProduct"
+            v-on:show_main_component="ShowMainComponent">
     </component-add-product>
 
-    <component-footer
-            :fixed_bottom="fixed_bottom">
-    </component-footer>
+    <component-footer></component-footer>
 
-    <component-modal
-            :product="productModal">
-    </component-modal>
-
+    <component-modal v-if="modals"></component-modal>
 </div>
-
-<script src="vue.js"></script>
+<script src="js/axios.js"></script>
+<script src="js/vue.js"></script>
+<script src="js/vuex.js"></script>
+<script src="store/store.js"></script>
+<script src="components/login.js"></script>
+<script src="components/registration.js"></script>
+<script src="components/header.js"></script>
+<script src="components/main.js"></script>
+<script src="components/favorite.js"></script>
+<script src="components/cart.js"></script>
+<script src="components/add-product.js"></script>
+<script src="components/footer.js"></script>
+<script src="components/modal.js"></script>
 <script src="app.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ=="
-        crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
         crossorigin="anonymous"></script>
@@ -133,6 +99,5 @@
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
