--- a/index.html
+++ b/index.html
@@ -5,85 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>hot tour</title>
     <link rel="icon" type="image/svg" sizes="32x32" href="./icon.jfif">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-          crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style/style.css"/>
-    <script src="js/fontawesome.js"></script>
 </head>
 <body>
+
 <div id="app" class="site" v-cloak>
-
-    <component-login
-            v-if="login"
-            v-on:show_registration="ShowHideLoginOrRegistration"
-            v-on:show_main="HideLoginShowMain">
-    </component-login>
-
-
-    <component-registration
-            v-if="registration"
-            v-on:show_login="ShowHideLoginOrRegistration">
-    </component-registration>
-
-
-    <component-header
-            v-on:show_component="ShowComponent"
-            :user="user"
-            :favorite_counts="favorite_counts"
-            :cart_counts="cart_counts"
-            :show_search_panel="show_search_panel"
-            :bg_header="bg_header">
-    </component-header>
-
-    <component-main
-            v-if="main"
-            :add_new_item="add_new_item"
-            v-on:favorite_count="FavoriteCount"
-            v-on:cart_count="CartCount">
-    </component-main>
-
-    <component-favorite
-            v-if="favorite_main"
-            v-on:favorite_count="FavoriteCount">
-    </component-favorite>
-
-    <component-cart
-            v-if="cart_main"
-            v-on:cart_count="CartCount">
-    </component-cart>
-
-    <component-add-product
-            v-if="addProduct"
-            v-on:add_new_product="AddNewProduct"
-            v-on:show_component="ShowComponent">
-    </component-add-product>
-
-    <component-footer></component-footer>
-
-    <component-modal v-if="modals"></component-modal>
+    <app></app>
 </div>
+
+<script src="js/fontawesome.js"></script>
 <script src="js/axios.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/vuex.js"></script>
 <script src="store/store.js"></script>
 <script src="components/login.js"></script>
 <script src="components/registration.js"></script>
-<script src="components/header.js"></script>
-<script src="components/main.js"></script>
+<script src="components/search.js"></script>
+<script src="components/nav-bar.js"></script>
+<script src="components/modal.js"></script>
+<script src="components/content.js"></script>
 <script src="components/favorite.js"></script>
 <script src="components/cart.js"></script>
 <script src="components/add-product.js"></script>
 <script src="components/footer.js"></script>
-<script src="components/modal.js"></script>
+<script src="components/main.js"></script>
 <script src="app.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-        crossorigin="anonymous"></script>
+<script src="js/bundle.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+
 </body>
 </html>
