--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 </head>
 <body>
 
-<div id="app" class="site" v-cloak>
-    <app></app>
-</div>
-
+<div id="app" class="site" v-cloak></div>
 
 <script src="js/fontawesome.js"></script>
 <script src="js/axios.js"></script>
