--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>hot tour</title>
     <link rel="icon" type="image/svg" sizes="32x32" href="./icon.jfif">
     <link rel="stylesheet" type="text/css" href="style/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="style/hotel-datepicker.css"/>
     <link rel="stylesheet" type="text/css" href="style/style.css"/>
 </head>
 <body>
 
-<div id="app" class="site" v-cloak></div>
+<div id="app" v-cloak></div>
 
 <script src="js/fontawesome.js"></script>
 <script src="js/axios.js"></script>
@@ -24,12 +25,15 @@
 <script src="components/modal.js"></script>
 <script src="components/content.js"></script>
 <script src="components/favorite.js"></script>
+<script src="components/date-pick.js"></script>
 <script src="components/cart.js"></script>
 <script src="components/add-product.js"></script>
 <script src="components/footer.js"></script>
 <script src="components/main.js"></script>
 <script src="app.js"></script>
 
+<script src="js/fecha.js"></script>
+<script src="js/hotel-datepicker.js"></script>
 <script src="js/bundle.min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
