--- a/index.html
+++ b/index.html
@@ -17,26 +17,9 @@
 <script src="js/axios.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/vuex.js"></script>
-<script src="store/store.js"></script>
-<script src="components/login.js"></script>
-<script src="components/registration.js"></script>
-<script src="components/search.js"></script>
-<script src="components/nav-bar.js"></script>
-<script src="components/modal.js"></script>
-<script src="components/content.js"></script>
-<script src="components/favorite.js"></script>
-<script src="components/date-pick.js"></script>
-<script src="components/cart.js"></script>
-<script src="components/add-product.js"></script>
-<script src="components/footer.js"></script>
-<script src="components/main.js"></script>
-<script src="app.js"></script>
-
-<script src="js/fecha.js"></script>
+<script src="store/store.js"></script><script src="js/fecha.js"></script>
 <script src="js/hotel-datepicker.js"></script>
-<script src="js/bundle.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script type="module" src="app.js"></script>
 
 </body>
 </html>
