--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <script src="js/axios.js"></script>
 <script src="js/vue.js"></script>
 <script src="js/vuex.js"></script>
-<script src="store/store.js"></script><script src="js/fecha.js"></script>
+<script src="store/store.js"></script>
+<script src="js/fecha.js"></script>
 <script src="js/hotel-datepicker.js"></script>
 <script type="module" src="app.js"></script>
 
